mini-compilador-documentado_1rarevision/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMA

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_sentencias
Rule 2     lista_sentencias -> lista_sentencias sentencia
Rule 3     lista_sentencias -> sentencia
Rule 4     lista_sentencias -> lista_sentencias error PUNTOCOM
Rule 5     lista_sentencias -> error PUNTOCOM
Rule 6     sentencia -> declaracion
Rule 7     sentencia -> asignacion
Rule 8     sentencia -> mostrar_stmt
Rule 9     sentencia -> leer_stmt
Rule 10    sentencia -> si_stmt
Rule 11    declaracion -> tipo ID ASIGNAR expr PUNTOCOM
Rule 12    tipo -> ENTERO
Rule 13    tipo -> CADENA_TIPO
Rule 14    tipo -> LOGICO_TIPO
Rule 15    asignacion -> ID ASIGNAR expr PUNTOCOM
Rule 16    mostrar_stmt -> MOSTRAR PAR_IZQ expr PAR_DER PUNTOCOM
Rule 17    leer_stmt -> LEER PAR_IZQ ID PAR_DER PUNTOCOM
Rule 18    si_stmt -> SI PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER SINO LLA_IZQ lista_sentencias LLA_DER
Rule 19    si_stmt -> SI PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER
Rule 20    expr -> expr O expr_y
Rule 21    expr -> expr_y
Rule 22    expr_y -> expr_y Y expr_no
Rule 23    expr_y -> expr_no
Rule 24    expr_no -> NO expr_no
Rule 25    expr_no -> expr_rel
Rule 26    expr_rel -> expr_arit MAYOR expr_arit
Rule 27    expr_rel -> expr_arit MENOR expr_arit
Rule 28    expr_rel -> expr_arit MAYOR_IG expr_arit
Rule 29    expr_rel -> expr_arit MENOR_IG expr_arit
Rule 30    expr_rel -> expr_arit IGUAL expr_arit
Rule 31    expr_rel -> expr_arit DISTINTO expr_arit
Rule 32    expr_rel -> expr_arit
Rule 33    expr_arit -> expr_arit MAS termino
Rule 34    expr_arit -> expr_arit MENOS termino
Rule 35    expr_arit -> termino
Rule 36    termino -> termino POR factor
Rule 37    termino -> termino ENTRE factor
Rule 38    termino -> factor
Rule 39    factor -> NUMERO
Rule 40    factor -> LITERAL_CADENA
Rule 41    factor -> VERDADERO
Rule 42    factor -> FALSO
Rule 43    factor -> ID
Rule 44    factor -> PAR_IZQ expr PAR_DER
Rule 45    factor -> MENOS factor

Terminals, with rules where they appear

ASIGNAR              : 11 15
CADENA_TIPO          : 13
COMA                 : 
DISTINTO             : 31
ENTERO               : 12
ENTRE                : 37
FALSO                : 42
ID                   : 11 15 17 43
IGUAL                : 30
LEER                 : 17
LITERAL_CADENA       : 40
LLA_DER              : 18 18 19
LLA_IZQ              : 18 18 19
LOGICO_TIPO          : 14
MAS                  : 33
MAYOR                : 26
MAYOR_IG             : 28
MENOR                : 27
MENOR_IG             : 29
MENOS                : 34 45
MOSTRAR              : 16
NO                   : 24
NUMERO               : 39
O                    : 20
PAR_DER              : 16 17 18 19 44
PAR_IZQ              : 16 17 18 19 44
POR                  : 36
PUNTOCOM             : 4 5 11 15 16 17
SI                   : 18 19
SINO                 : 18
VERDADERO            : 41
Y                    : 22
error                : 4 5

Nonterminals, with rules where they appear

asignacion           : 7
declaracion          : 6
expr                 : 11 15 16 18 19 20 44
expr_arit            : 26 26 27 27 28 28 29 29 30 30 31 31 32 33 34
expr_no              : 22 23 24
expr_rel             : 25
expr_y               : 20 21 22
factor               : 36 37 38 45
leer_stmt            : 9
lista_sentencias     : 1 2 4 18 18 19
mostrar_stmt         : 8
programa             : 0
sentencia            : 2 3
si_stmt              : 10
termino              : 33 34 35 36 37
tipo                 : 11

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_sentencias
    (2) lista_sentencias -> . lista_sentencias sentencia
    (3) lista_sentencias -> . sentencia
    (4) lista_sentencias -> . lista_sentencias error PUNTOCOM
    (5) lista_sentencias -> . error PUNTOCOM
    (6) sentencia -> . declaracion
    (7) sentencia -> . asignacion
    (8) sentencia -> . mostrar_stmt
    (9) sentencia -> . leer_stmt
    (10) sentencia -> . si_stmt
    (11) declaracion -> . tipo ID ASIGNAR expr PUNTOCOM
    (15) asignacion -> . ID ASIGNAR expr PUNTOCOM
    (16) mostrar_stmt -> . MOSTRAR PAR_IZQ expr PAR_DER PUNTOCOM
    (17) leer_stmt -> . LEER PAR_IZQ ID PAR_DER PUNTOCOM
    (18) si_stmt -> . SI PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER SINO LLA_IZQ lista_sentencias LLA_DER
    (19) si_stmt -> . SI PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER
    (12) tipo -> . ENTERO
    (13) tipo -> . CADENA_TIPO
    (14) tipo -> . LOGICO_TIPO

    error           shift and go to state 4
    ID              shift and go to state 11
    MOSTRAR         shift and go to state 12
    LEER            shift and go to state 13
    SI              shift and go to state 14
    ENTERO          shift and go to state 15
    CADENA_TIPO     shift and go to state 16
    LOGICO_TIPO     shift and go to state 17

    programa                       shift and go to state 1
    lista_sentencias               shift and go to state 2
    sentencia                      shift and go to state 3
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6
    mostrar_stmt                   shift and go to state 7
    leer_stmt                      shift and go to state 8
    si_stmt                        shift and go to state 9
    tipo                           shift and go to state 10

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_sentencias .
    (2) lista_sentencias -> lista_sentencias . sentencia
    (4) lista_sentencias -> lista_sentencias . error PUNTOCOM
    (6) sentencia -> . declaracion
    (7) sentencia -> . asignacion
    (8) sentencia -> . mostrar_stmt
    (9) sentencia -> . leer_stmt
    (10) sentencia -> . si_stmt
    (11) declaracion -> . tipo ID ASIGNAR expr PUNTOCOM
    (15) asignacion -> . ID ASIGNAR expr PUNTOCOM
    (16) mostrar_stmt -> . MOSTRAR PAR_IZQ expr PAR_DER PUNTOCOM
    (17) leer_stmt -> . LEER PAR_IZQ ID PAR_DER PUNTOCOM
    (18) si_stmt -> . SI PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER SINO LLA_IZQ lista_sentencias LLA_DER
    (19) si_stmt -> . SI PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER
    (12) tipo -> . ENTERO
    (13) tipo -> . CADENA_TIPO
    (14) tipo -> . LOGICO_TIPO

    $end            reduce using rule 1 (programa -> lista_sentencias .)
    error           shift and go to state 19
    ID              shift and go to state 11
    MOSTRAR         shift and go to state 12
    LEER            shift and go to state 13
    SI              shift and go to state 14
    ENTERO          shift and go to state 15
    CADENA_TIPO     shift and go to state 16
    LOGICO_TIPO     shift and go to state 17

    sentencia                      shift and go to state 18
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6
    mostrar_stmt                   shift and go to state 7
    leer_stmt                      shift and go to state 8
    si_stmt                        shift and go to state 9
    tipo                           shift and go to state 10

state 3

    (3) lista_sentencias -> sentencia .

    error           reduce using rule 3 (lista_sentencias -> sentencia .)
    ID              reduce using rule 3 (lista_sentencias -> sentencia .)
    MOSTRAR         reduce using rule 3 (lista_sentencias -> sentencia .)
    LEER            reduce using rule 3 (lista_sentencias -> sentencia .)
    SI              reduce using rule 3 (lista_sentencias -> sentencia .)
    ENTERO          reduce using rule 3 (lista_sentencias -> sentencia .)
    CADENA_TIPO     reduce using rule 3 (lista_sentencias -> sentencia .)
    LOGICO_TIPO     reduce using rule 3 (lista_sentencias -> sentencia .)
    $end            reduce using rule 3 (lista_sentencias -> sentencia .)
    LLA_DER         reduce using rule 3 (lista_sentencias -> sentencia .)


state 4

    (5) lista_sentencias -> error . PUNTOCOM

    PUNTOCOM        shift and go to state 20


state 5

    (6) sentencia -> declaracion .

    error           reduce using rule 6 (sentencia -> declaracion .)
    ID              reduce using rule 6 (sentencia -> declaracion .)
    MOSTRAR         reduce using rule 6 (sentencia -> declaracion .)
    LEER            reduce using rule 6 (sentencia -> declaracion .)
    SI              reduce using rule 6 (sentencia -> declaracion .)
    ENTERO          reduce using rule 6 (sentencia -> declaracion .)
    CADENA_TIPO     reduce using rule 6 (sentencia -> declaracion .)
    LOGICO_TIPO     reduce using rule 6 (sentencia -> declaracion .)
    $end            reduce using rule 6 (sentencia -> declaracion .)
    LLA_DER         reduce using rule 6 (sentencia -> declaracion .)


state 6

    (7) sentencia -> asignacion .

    error           reduce using rule 7 (sentencia -> asignacion .)
    ID              reduce using rule 7 (sentencia -> asignacion .)
    MOSTRAR         reduce using rule 7 (sentencia -> asignacion .)
    LEER            reduce using rule 7 (sentencia -> asignacion .)
    SI              reduce using rule 7 (sentencia -> asignacion .)
    ENTERO          reduce using rule 7 (sentencia -> asignacion .)
    CADENA_TIPO     reduce using rule 7 (sentencia -> asignacion .)
    LOGICO_TIPO     reduce using rule 7 (sentencia -> asignacion .)
    $end            reduce using rule 7 (sentencia -> asignacion .)
    LLA_DER         reduce using rule 7 (sentencia -> asignacion .)


state 7

    (8) sentencia -> mostrar_stmt .

    error           reduce using rule 8 (sentencia -> mostrar_stmt .)
    ID              reduce using rule 8 (sentencia -> mostrar_stmt .)
    MOSTRAR         reduce using rule 8 (sentencia -> mostrar_stmt .)
    LEER            reduce using rule 8 (sentencia -> mostrar_stmt .)
    SI              reduce using rule 8 (sentencia -> mostrar_stmt .)
    ENTERO          reduce using rule 8 (sentencia -> mostrar_stmt .)
    CADENA_TIPO     reduce using rule 8 (sentencia -> mostrar_stmt .)
    LOGICO_TIPO     reduce using rule 8 (sentencia -> mostrar_stmt .)
    $end            reduce using rule 8 (sentencia -> mostrar_stmt .)
    LLA_DER         reduce using rule 8 (sentencia -> mostrar_stmt .)


state 8

    (9) sentencia -> leer_stmt .

    error           reduce using rule 9 (sentencia -> leer_stmt .)
    ID              reduce using rule 9 (sentencia -> leer_stmt .)
    MOSTRAR         reduce using rule 9 (sentencia -> leer_stmt .)
    LEER            reduce using rule 9 (sentencia -> leer_stmt .)
    SI              reduce using rule 9 (sentencia -> leer_stmt .)
    ENTERO          reduce using rule 9 (sentencia -> leer_stmt .)
    CADENA_TIPO     reduce using rule 9 (sentencia -> leer_stmt .)
    LOGICO_TIPO     reduce using rule 9 (sentencia -> leer_stmt .)
    $end            reduce using rule 9 (sentencia -> leer_stmt .)
    LLA_DER         reduce using rule 9 (sentencia -> leer_stmt .)


state 9

    (10) sentencia -> si_stmt .

    error           reduce using rule 10 (sentencia -> si_stmt .)
    ID              reduce using rule 10 (sentencia -> si_stmt .)
    MOSTRAR         reduce using rule 10 (sentencia -> si_stmt .)
    LEER            reduce using rule 10 (sentencia -> si_stmt .)
    SI              reduce using rule 10 (sentencia -> si_stmt .)
    ENTERO          reduce using rule 10 (sentencia -> si_stmt .)
    CADENA_TIPO     reduce using rule 10 (sentencia -> si_stmt .)
    LOGICO_TIPO     reduce using rule 10 (sentencia -> si_stmt .)
    $end            reduce using rule 10 (sentencia -> si_stmt .)
    LLA_DER         reduce using rule 10 (sentencia -> si_stmt .)


state 10

    (11) declaracion -> tipo . ID ASIGNAR expr PUNTOCOM

    ID              shift and go to state 21


state 11

    (15) asignacion -> ID . ASIGNAR expr PUNTOCOM

    ASIGNAR         shift and go to state 22


state 12

    (16) mostrar_stmt -> MOSTRAR . PAR_IZQ expr PAR_DER PUNTOCOM

    PAR_IZQ         shift and go to state 23


state 13

    (17) leer_stmt -> LEER . PAR_IZQ ID PAR_DER PUNTOCOM

    PAR_IZQ         shift and go to state 24


state 14

    (18) si_stmt -> SI . PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER SINO LLA_IZQ lista_sentencias LLA_DER
    (19) si_stmt -> SI . PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER

    PAR_IZQ         shift and go to state 25


state 15

    (12) tipo -> ENTERO .

    ID              reduce using rule 12 (tipo -> ENTERO .)


state 16

    (13) tipo -> CADENA_TIPO .

    ID              reduce using rule 13 (tipo -> CADENA_TIPO .)


state 17

    (14) tipo -> LOGICO_TIPO .

    ID              reduce using rule 14 (tipo -> LOGICO_TIPO .)


state 18

    (2) lista_sentencias -> lista_sentencias sentencia .

    error           reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    ID              reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    MOSTRAR         reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    LEER            reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    SI              reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    ENTERO          reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    CADENA_TIPO     reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    LOGICO_TIPO     reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    $end            reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    LLA_DER         reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)


state 19

    (4) lista_sentencias -> lista_sentencias error . PUNTOCOM

    PUNTOCOM        shift and go to state 26


state 20

    (5) lista_sentencias -> error PUNTOCOM .

    error           reduce using rule 5 (lista_sentencias -> error PUNTOCOM .)
    ID              reduce using rule 5 (lista_sentencias -> error PUNTOCOM .)
    MOSTRAR         reduce using rule 5 (lista_sentencias -> error PUNTOCOM .)
    LEER            reduce using rule 5 (lista_sentencias -> error PUNTOCOM .)
    SI              reduce using rule 5 (lista_sentencias -> error PUNTOCOM .)
    ENTERO          reduce using rule 5 (lista_sentencias -> error PUNTOCOM .)
    CADENA_TIPO     reduce using rule 5 (lista_sentencias -> error PUNTOCOM .)
    LOGICO_TIPO     reduce using rule 5 (lista_sentencias -> error PUNTOCOM .)
    $end            reduce using rule 5 (lista_sentencias -> error PUNTOCOM .)
    LLA_DER         reduce using rule 5 (lista_sentencias -> error PUNTOCOM .)


state 21

    (11) declaracion -> tipo ID . ASIGNAR expr PUNTOCOM

    ASIGNAR         shift and go to state 27


state 22

    (15) asignacion -> ID ASIGNAR . expr PUNTOCOM
    (20) expr -> . expr O expr_y
    (21) expr -> . expr_y
    (22) expr_y -> . expr_y Y expr_no
    (23) expr_y -> . expr_no
    (24) expr_no -> . NO expr_no
    (25) expr_no -> . expr_rel
    (26) expr_rel -> . expr_arit MAYOR expr_arit
    (27) expr_rel -> . expr_arit MENOR expr_arit
    (28) expr_rel -> . expr_arit MAYOR_IG expr_arit
    (29) expr_rel -> . expr_arit MENOR_IG expr_arit
    (30) expr_rel -> . expr_arit IGUAL expr_arit
    (31) expr_rel -> . expr_arit DISTINTO expr_arit
    (32) expr_rel -> . expr_arit
    (33) expr_arit -> . expr_arit MAS termino
    (34) expr_arit -> . expr_arit MENOS termino
    (35) expr_arit -> . termino
    (36) termino -> . termino POR factor
    (37) termino -> . termino ENTRE factor
    (38) termino -> . factor
    (39) factor -> . NUMERO
    (40) factor -> . LITERAL_CADENA
    (41) factor -> . VERDADERO
    (42) factor -> . FALSO
    (43) factor -> . ID
    (44) factor -> . PAR_IZQ expr PAR_DER
    (45) factor -> . MENOS factor

    NO              shift and go to state 32
    NUMERO          shift and go to state 38
    LITERAL_CADENA  shift and go to state 39
    VERDADERO       shift and go to state 40
    FALSO           shift and go to state 41
    ID              shift and go to state 28
    PAR_IZQ         shift and go to state 42
    MENOS           shift and go to state 36

    expr                           shift and go to state 29
    expr_y                         shift and go to state 30
    expr_no                        shift and go to state 31
    expr_rel                       shift and go to state 33
    expr_arit                      shift and go to state 34
    termino                        shift and go to state 35
    factor                         shift and go to state 37

state 23

    (16) mostrar_stmt -> MOSTRAR PAR_IZQ . expr PAR_DER PUNTOCOM
    (20) expr -> . expr O expr_y
    (21) expr -> . expr_y
    (22) expr_y -> . expr_y Y expr_no
    (23) expr_y -> . expr_no
    (24) expr_no -> . NO expr_no
    (25) expr_no -> . expr_rel
    (26) expr_rel -> . expr_arit MAYOR expr_arit
    (27) expr_rel -> . expr_arit MENOR expr_arit
    (28) expr_rel -> . expr_arit MAYOR_IG expr_arit
    (29) expr_rel -> . expr_arit MENOR_IG expr_arit
    (30) expr_rel -> . expr_arit IGUAL expr_arit
    (31) expr_rel -> . expr_arit DISTINTO expr_arit
    (32) expr_rel -> . expr_arit
    (33) expr_arit -> . expr_arit MAS termino
    (34) expr_arit -> . expr_arit MENOS termino
    (35) expr_arit -> . termino
    (36) termino -> . termino POR factor
    (37) termino -> . termino ENTRE factor
    (38) termino -> . factor
    (39) factor -> . NUMERO
    (40) factor -> . LITERAL_CADENA
    (41) factor -> . VERDADERO
    (42) factor -> . FALSO
    (43) factor -> . ID
    (44) factor -> . PAR_IZQ expr PAR_DER
    (45) factor -> . MENOS factor

    NO              shift and go to state 32
    NUMERO          shift and go to state 38
    LITERAL_CADENA  shift and go to state 39
    VERDADERO       shift and go to state 40
    FALSO           shift and go to state 41
    ID              shift and go to state 28
    PAR_IZQ         shift and go to state 42
    MENOS           shift and go to state 36

    expr                           shift and go to state 43
    expr_y                         shift and go to state 30
    expr_no                        shift and go to state 31
    expr_rel                       shift and go to state 33
    expr_arit                      shift and go to state 34
    termino                        shift and go to state 35
    factor                         shift and go to state 37

state 24

    (17) leer_stmt -> LEER PAR_IZQ . ID PAR_DER PUNTOCOM

    ID              shift and go to state 44


state 25

    (18) si_stmt -> SI PAR_IZQ . expr PAR_DER LLA_IZQ lista_sentencias LLA_DER SINO LLA_IZQ lista_sentencias LLA_DER
    (19) si_stmt -> SI PAR_IZQ . expr PAR_DER LLA_IZQ lista_sentencias LLA_DER
    (20) expr -> . expr O expr_y
    (21) expr -> . expr_y
    (22) expr_y -> . expr_y Y expr_no
    (23) expr_y -> . expr_no
    (24) expr_no -> . NO expr_no
    (25) expr_no -> . expr_rel
    (26) expr_rel -> . expr_arit MAYOR expr_arit
    (27) expr_rel -> . expr_arit MENOR expr_arit
    (28) expr_rel -> . expr_arit MAYOR_IG expr_arit
    (29) expr_rel -> . expr_arit MENOR_IG expr_arit
    (30) expr_rel -> . expr_arit IGUAL expr_arit
    (31) expr_rel -> . expr_arit DISTINTO expr_arit
    (32) expr_rel -> . expr_arit
    (33) expr_arit -> . expr_arit MAS termino
    (34) expr_arit -> . expr_arit MENOS termino
    (35) expr_arit -> . termino
    (36) termino -> . termino POR factor
    (37) termino -> . termino ENTRE factor
    (38) termino -> . factor
    (39) factor -> . NUMERO
    (40) factor -> . LITERAL_CADENA
    (41) factor -> . VERDADERO
    (42) factor -> . FALSO
    (43) factor -> . ID
    (44) factor -> . PAR_IZQ expr PAR_DER
    (45) factor -> . MENOS factor

    NO              shift and go to state 32
    NUMERO          shift and go to state 38
    LITERAL_CADENA  shift and go to state 39
    VERDADERO       shift and go to state 40
    FALSO           shift and go to state 41
    ID              shift and go to state 28
    PAR_IZQ         shift and go to state 42
    MENOS           shift and go to state 36

    expr                           shift and go to state 45
    expr_y                         shift and go to state 30
    expr_no                        shift and go to state 31
    expr_rel                       shift and go to state 33
    expr_arit                      shift and go to state 34
    termino                        shift and go to state 35
    factor                         shift and go to state 37

state 26

    (4) lista_sentencias -> lista_sentencias error PUNTOCOM .

    error           reduce using rule 4 (lista_sentencias -> lista_sentencias error PUNTOCOM .)
    ID              reduce using rule 4 (lista_sentencias -> lista_sentencias error PUNTOCOM .)
    MOSTRAR         reduce using rule 4 (lista_sentencias -> lista_sentencias error PUNTOCOM .)
    LEER            reduce using rule 4 (lista_sentencias -> lista_sentencias error PUNTOCOM .)
    SI              reduce using rule 4 (lista_sentencias -> lista_sentencias error PUNTOCOM .)
    ENTERO          reduce using rule 4 (lista_sentencias -> lista_sentencias error PUNTOCOM .)
    CADENA_TIPO     reduce using rule 4 (lista_sentencias -> lista_sentencias error PUNTOCOM .)
    LOGICO_TIPO     reduce using rule 4 (lista_sentencias -> lista_sentencias error PUNTOCOM .)
    $end            reduce using rule 4 (lista_sentencias -> lista_sentencias error PUNTOCOM .)
    LLA_DER         reduce using rule 4 (lista_sentencias -> lista_sentencias error PUNTOCOM .)


state 27

    (11) declaracion -> tipo ID ASIGNAR . expr PUNTOCOM
    (20) expr -> . expr O expr_y
    (21) expr -> . expr_y
    (22) expr_y -> . expr_y Y expr_no
    (23) expr_y -> . expr_no
    (24) expr_no -> . NO expr_no
    (25) expr_no -> . expr_rel
    (26) expr_rel -> . expr_arit MAYOR expr_arit
    (27) expr_rel -> . expr_arit MENOR expr_arit
    (28) expr_rel -> . expr_arit MAYOR_IG expr_arit
    (29) expr_rel -> . expr_arit MENOR_IG expr_arit
    (30) expr_rel -> . expr_arit IGUAL expr_arit
    (31) expr_rel -> . expr_arit DISTINTO expr_arit
    (32) expr_rel -> . expr_arit
    (33) expr_arit -> . expr_arit MAS termino
    (34) expr_arit -> . expr_arit MENOS termino
    (35) expr_arit -> . termino
    (36) termino -> . termino POR factor
    (37) termino -> . termino ENTRE factor
    (38) termino -> . factor
    (39) factor -> . NUMERO
    (40) factor -> . LITERAL_CADENA
    (41) factor -> . VERDADERO
    (42) factor -> . FALSO
    (43) factor -> . ID
    (44) factor -> . PAR_IZQ expr PAR_DER
    (45) factor -> . MENOS factor

    NO              shift and go to state 32
    NUMERO          shift and go to state 38
    LITERAL_CADENA  shift and go to state 39
    VERDADERO       shift and go to state 40
    FALSO           shift and go to state 41
    ID              shift and go to state 28
    PAR_IZQ         shift and go to state 42
    MENOS           shift and go to state 36

    expr                           shift and go to state 46
    expr_y                         shift and go to state 30
    expr_no                        shift and go to state 31
    expr_rel                       shift and go to state 33
    expr_arit                      shift and go to state 34
    termino                        shift and go to state 35
    factor                         shift and go to state 37

state 28

    (43) factor -> ID .

    POR             reduce using rule 43 (factor -> ID .)
    ENTRE           reduce using rule 43 (factor -> ID .)
    MAYOR           reduce using rule 43 (factor -> ID .)
    MENOR           reduce using rule 43 (factor -> ID .)
    MAYOR_IG        reduce using rule 43 (factor -> ID .)
    MENOR_IG        reduce using rule 43 (factor -> ID .)
    IGUAL           reduce using rule 43 (factor -> ID .)
    DISTINTO        reduce using rule 43 (factor -> ID .)
    MAS             reduce using rule 43 (factor -> ID .)
    MENOS           reduce using rule 43 (factor -> ID .)
    Y               reduce using rule 43 (factor -> ID .)
    PUNTOCOM        reduce using rule 43 (factor -> ID .)
    O               reduce using rule 43 (factor -> ID .)
    PAR_DER         reduce using rule 43 (factor -> ID .)


state 29

    (15) asignacion -> ID ASIGNAR expr . PUNTOCOM
    (20) expr -> expr . O expr_y

    PUNTOCOM        shift and go to state 47
    O               shift and go to state 48


state 30

    (21) expr -> expr_y .
    (22) expr_y -> expr_y . Y expr_no

    PUNTOCOM        reduce using rule 21 (expr -> expr_y .)
    O               reduce using rule 21 (expr -> expr_y .)
    PAR_DER         reduce using rule 21 (expr -> expr_y .)
    Y               shift and go to state 49


state 31

    (23) expr_y -> expr_no .

    Y               reduce using rule 23 (expr_y -> expr_no .)
    PUNTOCOM        reduce using rule 23 (expr_y -> expr_no .)
    O               reduce using rule 23 (expr_y -> expr_no .)
    PAR_DER         reduce using rule 23 (expr_y -> expr_no .)


state 32

    (24) expr_no -> NO . expr_no
    (24) expr_no -> . NO expr_no
    (25) expr_no -> . expr_rel
    (26) expr_rel -> . expr_arit MAYOR expr_arit
    (27) expr_rel -> . expr_arit MENOR expr_arit
    (28) expr_rel -> . expr_arit MAYOR_IG expr_arit
    (29) expr_rel -> . expr_arit MENOR_IG expr_arit
    (30) expr_rel -> . expr_arit IGUAL expr_arit
    (31) expr_rel -> . expr_arit DISTINTO expr_arit
    (32) expr_rel -> . expr_arit
    (33) expr_arit -> . expr_arit MAS termino
    (34) expr_arit -> . expr_arit MENOS termino
    (35) expr_arit -> . termino
    (36) termino -> . termino POR factor
    (37) termino -> . termino ENTRE factor
    (38) termino -> . factor
    (39) factor -> . NUMERO
    (40) factor -> . LITERAL_CADENA
    (41) factor -> . VERDADERO
    (42) factor -> . FALSO
    (43) factor -> . ID
    (44) factor -> . PAR_IZQ expr PAR_DER
    (45) factor -> . MENOS factor

    NO              shift and go to state 32
    NUMERO          shift and go to state 38
    LITERAL_CADENA  shift and go to state 39
    VERDADERO       shift and go to state 40
    FALSO           shift and go to state 41
    ID              shift and go to state 28
    PAR_IZQ         shift and go to state 42
    MENOS           shift and go to state 36

    expr_no                        shift and go to state 50
    expr_rel                       shift and go to state 33
    expr_arit                      shift and go to state 34
    termino                        shift and go to state 35
    factor                         shift and go to state 37

state 33

    (25) expr_no -> expr_rel .

    Y               reduce using rule 25 (expr_no -> expr_rel .)
    PUNTOCOM        reduce using rule 25 (expr_no -> expr_rel .)
    O               reduce using rule 25 (expr_no -> expr_rel .)
    PAR_DER         reduce using rule 25 (expr_no -> expr_rel .)


state 34

    (26) expr_rel -> expr_arit . MAYOR expr_arit
    (27) expr_rel -> expr_arit . MENOR expr_arit
    (28) expr_rel -> expr_arit . MAYOR_IG expr_arit
    (29) expr_rel -> expr_arit . MENOR_IG expr_arit
    (30) expr_rel -> expr_arit . IGUAL expr_arit
    (31) expr_rel -> expr_arit . DISTINTO expr_arit
    (32) expr_rel -> expr_arit .
    (33) expr_arit -> expr_arit . MAS termino
    (34) expr_arit -> expr_arit . MENOS termino

    MAYOR           shift and go to state 51
    MENOR           shift and go to state 52
    MAYOR_IG        shift and go to state 53
    MENOR_IG        shift and go to state 54
    IGUAL           shift and go to state 55
    DISTINTO        shift and go to state 56
    Y               reduce using rule 32 (expr_rel -> expr_arit .)
    PUNTOCOM        reduce using rule 32 (expr_rel -> expr_arit .)
    O               reduce using rule 32 (expr_rel -> expr_arit .)
    PAR_DER         reduce using rule 32 (expr_rel -> expr_arit .)
    MAS             shift and go to state 57
    MENOS           shift and go to state 58


state 35

    (35) expr_arit -> termino .
    (36) termino -> termino . POR factor
    (37) termino -> termino . ENTRE factor

    MAYOR           reduce using rule 35 (expr_arit -> termino .)
    MENOR           reduce using rule 35 (expr_arit -> termino .)
    MAYOR_IG        reduce using rule 35 (expr_arit -> termino .)
    MENOR_IG        reduce using rule 35 (expr_arit -> termino .)
    IGUAL           reduce using rule 35 (expr_arit -> termino .)
    DISTINTO        reduce using rule 35 (expr_arit -> termino .)
    MAS             reduce using rule 35 (expr_arit -> termino .)
    MENOS           reduce using rule 35 (expr_arit -> termino .)
    Y               reduce using rule 35 (expr_arit -> termino .)
    PUNTOCOM        reduce using rule 35 (expr_arit -> termino .)
    O               reduce using rule 35 (expr_arit -> termino .)
    PAR_DER         reduce using rule 35 (expr_arit -> termino .)
    POR             shift and go to state 59
    ENTRE           shift and go to state 60


state 36

    (45) factor -> MENOS . factor
    (39) factor -> . NUMERO
    (40) factor -> . LITERAL_CADENA
    (41) factor -> . VERDADERO
    (42) factor -> . FALSO
    (43) factor -> . ID
    (44) factor -> . PAR_IZQ expr PAR_DER
    (45) factor -> . MENOS factor

    NUMERO          shift and go to state 38
    LITERAL_CADENA  shift and go to state 39
    VERDADERO       shift and go to state 40
    FALSO           shift and go to state 41
    ID              shift and go to state 28
    PAR_IZQ         shift and go to state 42
    MENOS           shift and go to state 36

    factor                         shift and go to state 61

state 37

    (38) termino -> factor .

    POR             reduce using rule 38 (termino -> factor .)
    ENTRE           reduce using rule 38 (termino -> factor .)
    MAYOR           reduce using rule 38 (termino -> factor .)
    MENOR           reduce using rule 38 (termino -> factor .)
    MAYOR_IG        reduce using rule 38 (termino -> factor .)
    MENOR_IG        reduce using rule 38 (termino -> factor .)
    IGUAL           reduce using rule 38 (termino -> factor .)
    DISTINTO        reduce using rule 38 (termino -> factor .)
    MAS             reduce using rule 38 (termino -> factor .)
    MENOS           reduce using rule 38 (termino -> factor .)
    Y               reduce using rule 38 (termino -> factor .)
    PUNTOCOM        reduce using rule 38 (termino -> factor .)
    O               reduce using rule 38 (termino -> factor .)
    PAR_DER         reduce using rule 38 (termino -> factor .)


state 38

    (39) factor -> NUMERO .

    POR             reduce using rule 39 (factor -> NUMERO .)
    ENTRE           reduce using rule 39 (factor -> NUMERO .)
    MAYOR           reduce using rule 39 (factor -> NUMERO .)
    MENOR           reduce using rule 39 (factor -> NUMERO .)
    MAYOR_IG        reduce using rule 39 (factor -> NUMERO .)
    MENOR_IG        reduce using rule 39 (factor -> NUMERO .)
    IGUAL           reduce using rule 39 (factor -> NUMERO .)
    DISTINTO        reduce using rule 39 (factor -> NUMERO .)
    MAS             reduce using rule 39 (factor -> NUMERO .)
    MENOS           reduce using rule 39 (factor -> NUMERO .)
    Y               reduce using rule 39 (factor -> NUMERO .)
    PUNTOCOM        reduce using rule 39 (factor -> NUMERO .)
    O               reduce using rule 39 (factor -> NUMERO .)
    PAR_DER         reduce using rule 39 (factor -> NUMERO .)


state 39

    (40) factor -> LITERAL_CADENA .
